08/19/2003 Bob Rossi <bob@brasko.net>

   * ibuf.c: added #include <string.h>

version 0.3.4 (08/14/2003):

version 0.3.3a (07/16/2003):

version 0.3.3 (07/15/2003):

version 0.3.2 (06/25/2003):

06/04/2003 Bob Rossi <bob_rossi@cox.net>
   
   * queue.h: Added queue_iterator_init,queue_iterator_free,
   queue_iterator_reset,queue_iterator_forward,queue_iterator_end_of_list,
   queue_iterator_get_item and struct queue_iterator
   * queue.c: implemented functions above.