@@ -1,3 +1,10 @@
+09/17/2003 Bob Rossi <bob@brasko.net>
+
+   * queue.h: Removed queue_iterator_init,queue_iterator_free,
+   queue_iterator_reset, queue_iterator_forward,queue_iterator_end_of_list,
+   queue_iterator_get_item and global 'struct queue_iterator'
+   * queue.c: ditto ( definitions )
+
 08/19/2003 Bob Rossi <bob@brasko.net>
 
    * ibuf.c: added #include <string.h>
